@@ -1,3 +1,8 @@
+2003-04-29  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
+
+	 * src.dsw, link/z80/aslink.h, link/z80/linkz80.dsp: z80 linker
+	 support for MSVC.
+	 
 2003-04-29  Kevin Vigor <kevin@vigor.nu>
 
 	Initial support for DS80C400. "Hello world" runs on TINIm400 
